fix: bumping the `z-index` of time pickers

--- a/packages/event-builder/src/styles/datepicker/styles.scss
+++ b/packages/event-builder/src/styles/datepicker/styles.scss
@@ -7,7 +7,7 @@
 }
 
 .react-datepicker-popper {
-  z-index: 3;
+  z-index: 10;
 }
 
 .react-datepicker {
